--- a/Source/Stencil.Server/Stencil.SDK.Web/Stencil.SDK.Web.csproj
+++ b/Source/Stencil.Server/Stencil.SDK.Web/Stencil.SDK.Web.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>StencilSDKDuo</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+	<LangVersion>6</LangVersion>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
