Use local connection strings in Web.config

--- a/Source/Stencil.Server/Stencil.Backing/Web.config
+++ b/Source/Stencil.Server/Stencil.Backing/Web.config
@@ -22,8 +22,7 @@
     <add key="Stencil-PUSH-CONN" value="Endpoint=sb://ns-your-azure-push.servicebus.windows.net/;SharedAccessKeyName=DefaultFullSharedAccessSignature;SharedAccessKey=GetFromAzurePortal" />
 
   </appSettings>
-  <connectionStrings>
-    <add name="Stencil-SQL" connectionString="Initial Catalog=stencil_base;data source=your-database.database.windows.net;User ID=snl-authoritative;Password=your-password;Encrypt=true;Trusted_Connection=false;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  <connectionStrings configSource="localConnectionStrings.config">
   </connectionStrings>
   <system.web>
     <customErrors mode="On" />
