--- a/Source/Stencil.Server/Stencil.Website/Web.config
+++ b/Source/Stencil.Server/Stencil.Website/Web.config
@@ -4,7 +4,7 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings>
+  <appSettings file="localAppSettings.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -22,6 +22,9 @@
     <add key="Stencil-PUSH-CONN" value="Endpoint=sb://ns-your-azure-push.servicebus.windows.net/;SharedAccessKeyName=DefaultFullSharedAccessSignature;SharedAccessKey=GetFromAzurePortal" />
   </appSettings>
   <connectionStrings configSource="localConnectionStrings.config">
+    <!-- Add your local configuration to `localConnectionStrings.config`
+    <add name="Stencil-SQL" connectionString="Initial Catalog=stencil_base;data source=your-database.database.windows.net;User ID=snl-authoritative;Password=your-password;Encrypt=true;Trusted_Connection=false;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+     -->
   </connectionStrings>
   <system.web>
     <customErrors mode="Off" />
