Allow running CodeGenerator.exe from inside VS

--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,6 @@ FakesAssemblies/
 # Local Configuration Files
 localAppSettings.config
 localConnectionStrings.config
+
+# Local launch settings
+launchSettings.json
