--- a/Source/Stencil.Server/Stencil.Primary/Stencil.Primary.csproj
+++ b/Source/Stencil.Server/Stencil.Primary/Stencil.Primary.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Business\Synchronization\Implementation\SynchronizerBase.cs" />
     <Compile Include="Business\Synchronization\ISynchronizer.cs" />
     <Compile Include="Daemons\Agents.cs" />
+    <Compile Include="Daemons\NonReentrantDaemon.cs" />
     <Compile Include="Daemons\WorkerBase.cs" />
     <Compile Include="Emaling\SimpleEmailer.cs" />
     <Compile Include="Emaling\EmailFormat.cs" />
