--- a/Source/Stencil.Server/Stencil.Data.Sql/App.Config
+++ b/Source/Stencil.Server/Stencil.Data.Sql/App.Config
@@ -4,8 +4,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="StencilContext" connectionString="metadata=res://*/StencilModel.csdl|res://*/StencilModel.ssdl|res://*/StencilModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=stencil-demo.database.windows.net;initial catalog=stencil_base;integrated security=False;user id=snl-authoritative;password=P20hxf@vll2;multipleactiveresultsets=True;encrypt=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <connectionStrings configSource="localConnectionStrings.config">
+    <!-- 
+    <add name="StencilContext" connectionString="metadata=res://*/StencilModel.csdl|res://*/StencilModel.ssdl|res://*/StencilModel.msl;provider=System.Data.SqlClient;provider connection string='data source=XXXXXX.database.windows.net;initial catalog=XXXXX;integrated security=False;user id=XXXXXX;password=&quot;XXXX&quot;;multipleactiveresultsets=True;encrypt=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
+    -->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
