Include local config in the projects to avoid hiding the dependencies

--- a/Source/Stencil.Server/Stencil.Data.Sql/Stencil.Data.Sql.csproj
+++ b/Source/Stencil.Server/Stencil.Data.Sql/Stencil.Data.Sql.csproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
+    <None Include="localConnectionStrings.config" />
     <None Include="packages.config" />
     <None Include="StencilModel.edmx.diagram">
       <DependentUpon>StencilModel.edmx</DependentUpon>
