--- a/Source/Stencil.Server/Stencil.Website/Stencil.Website.csproj
+++ b/Source/Stencil.Server/Stencil.Website/Stencil.Website.csproj
@@ -186,6 +186,8 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="_build.txt" />
+    <Content Include="localAppSettings.config" />
+    <Content Include="localConnectionStrings.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
