--- a/Source/Stencil.Server/Stencil.Backing/Stencil.Backing.csproj
+++ b/Source/Stencil.Server/Stencil.Backing/Stencil.Backing.csproj
@@ -222,6 +222,10 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="localAppSettings.config" />
+    <Content Include="localConnectionStrings.config" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
