Add ProductVersionPlatform relationship

--- a/Source/Stencil.Server/Stencil.Data.Sql/Stencil.Data.Sql.csproj
+++ b/Source/Stencil.Server/Stencil.Data.Sql/Stencil.Data.Sql.csproj
@@ -97,6 +97,9 @@
     <Compile Include="dbProductVersion.cs">
       <DependentUpon>StencilModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="dbProductVersionPlatform.cs">
+      <DependentUpon>StencilModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="dbTicket.cs">
       <DependentUpon>StencilModel.tt</DependentUpon>
     </Compile>
