--- a/Source/Stencil.Server/Stencil.Primary/Stencil.Primary.csproj
+++ b/Source/Stencil.Server/Stencil.Primary/Stencil.Primary.csproj
@@ -135,10 +135,12 @@
     <Compile Include="Business\Direct\Implementation\PlatformBusiness_Crud.cs" />
     <Compile Include="Business\Direct\Implementation\ProductBusiness_Crud.cs" />
     <Compile Include="Business\Direct\Implementation\ProductVersionBusiness_Crud.cs" />
+    <Compile Include="Business\Direct\Implementation\ProductVersionPlatformBusiness_Crud.cs" />
     <Compile Include="Business\Direct\Implementation\TicketBusiness_Crud.cs" />
     <Compile Include="Business\Direct\IPlatformBusiness_Crud.cs" />
     <Compile Include="Business\Direct\IProductBusiness_Crud.cs" />
     <Compile Include="Business\Direct\IProductVersionBusiness_Crud.cs" />
+    <Compile Include="Business\Direct\IProductVersionPlatformBusiness_Crud.cs" />
     <Compile Include="Business\Direct\ITicketBusiness_Crud.cs" />
     <Compile Include="Business\Direct\_DirectExtensions.cs" />
     <Compile Include="Business\Index\Factory\DocumentNames.cs" />
@@ -161,11 +163,13 @@
     <Compile Include="Business\Index\Implementation\PlatformIndex_Core.cs" />
     <Compile Include="Business\Index\Implementation\ProductIndex_Core.cs" />
     <Compile Include="Business\Index\Implementation\ProductVersionIndex_Core.cs" />
+    <Compile Include="Business\Index\Implementation\ProductVersionPlatformIndex_Core.cs" />
     <Compile Include="Business\Index\Implementation\TicketIndex_Core.cs" />
     <Compile Include="Business\Index\IndexResult.cs" />
     <Compile Include="Business\Index\IPlatformIndex_Core.cs" />
     <Compile Include="Business\Index\IProductIndex_Core.cs" />
     <Compile Include="Business\Index\IProductVersionIndex_Core.cs" />
+    <Compile Include="Business\Index\IProductVersionPlatformIndex_Core.cs" />
     <Compile Include="Business\Index\ITicketIndex_Core.cs" />
     <Compile Include="Business\Index\_IndexExtensions.cs" />
     <Compile Include="Business\Integration\DependencyCoordinator_Core.cs">
@@ -179,11 +183,13 @@
     <Compile Include="Business\Synchronization\Implementation\AccountSynchronizer_Core.cs" />
     <Compile Include="Business\Synchronization\Implementation\PlatformSynchronizer_Core.cs" />
     <Compile Include="Business\Synchronization\Implementation\ProductSynchronizer_Core.cs" />
+    <Compile Include="Business\Synchronization\Implementation\ProductVersionPlatformSynchronizer_Core.cs" />
     <Compile Include="Business\Synchronization\Implementation\ProductVersionSynchronizer_Core.cs" />
     <Compile Include="Business\Synchronization\Implementation\SynchronizerBase.cs" />
     <Compile Include="Business\Synchronization\Implementation\TicketSynchronizer_Core.cs" />
     <Compile Include="Business\Synchronization\IPlatformSynchronizer_Core.cs" />
     <Compile Include="Business\Synchronization\IProductSynchronizer_Core.cs" />
+    <Compile Include="Business\Synchronization\IProductVersionPlatformSynchronizer_Core.cs" />
     <Compile Include="Business\Synchronization\IProductVersionSynchronizer_Core.cs" />
     <Compile Include="Business\Synchronization\ISynchronizer.cs" />
     <Compile Include="Business\Synchronization\ITicketSynchronizer_Core.cs" />
