--- a/Source/Stencil.Server/Stencil.Domain/Stencil.Domain.csproj
+++ b/Source/Stencil.Server/Stencil.Domain/Stencil.Domain.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Domain\Account.cs" />
     <Compile Include="DomainModel.cs" />
+    <Compile Include="Domain\AffectedProduct.cs" />
     <Compile Include="Domain\Asset.cs" />
     <Compile Include="Domain\AssetType.cs" />
     <Compile Include="Domain\Bitness.cs" />
