--- a/Source/Stencil.Server/Stencil.Primary.UnitTests/Stencil.Primary.UnitTests.csproj
+++ b/Source/Stencil.Server/Stencil.Primary.UnitTests/Stencil.Primary.UnitTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="4.1.1" />
     <PackageReference Include="Codeable.Foundation" Version="4.0.54" />
     <PackageReference Include="Effort.EF6" Version="2.2.13" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
