--- a/Source/Stencil.Server/Stencil.Primary.UnitTests/Stencil.Primary.UnitTests.csproj
+++ b/Source/Stencil.Server/Stencil.Primary.UnitTests/Stencil.Primary.UnitTests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
-
+    <LangVersion>Latest</LangVersion>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
