--- a/Source/Stencil.Server/DbAndIndexMigrator/DbAndIndexMigrator.csproj
+++ b/Source/Stencil.Server/DbAndIndexMigrator/DbAndIndexMigrator.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Codeable.Foundation" Version="4.0.54" />
     <PackageReference Include="NEST" Version="2.3.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="8.0.3" />
     <PackageReference Include="Simple.Migrations" Version="0.9.21" />
   </ItemGroup>
 
