--- a/Source/Stencil.Server/Plugins/Stencil.Plugins.GitHub/Stencil.Plugins.GitHub.csproj
+++ b/Source/Stencil.Server/Plugins/Stencil.Plugins.GitHub/Stencil.Plugins.GitHub.csproj
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
-  <Import Project="..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,12 +7,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{85D0F8FD-BF8D-49E5-8184-D117436B316F}</ProjectGuid>
+    <ProjectGuid>{9E1F4AAC-5AC4-45F7-896B-11E43291D7DF}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Stencil.Website</RootNamespace>
-    <AssemblyName>Stencil.Website</AssemblyName>
+    <RootNamespace>Stencil.Plugins.GitHub</RootNamespace>
+    <AssemblyName>Stencil.Plugins.GitHub</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -46,36 +44,32 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Codeable.Foundation.Common, Version=4.0.54.15408, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Codeable.Foundation.4.0.54\lib\Codeable.Foundation.Common.dll</HintPath>
+      <HintPath>..\..\packages\Codeable.Foundation.4.0.54\lib\Codeable.Foundation.Common.dll</HintPath>
     </Reference>
     <Reference Include="Codeable.Foundation.Core, Version=4.0.54.15409, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Codeable.Foundation.4.0.54\lib\Codeable.Foundation.Core.dll</HintPath>
+      <HintPath>..\..\packages\Codeable.Foundation.4.0.54\lib\Codeable.Foundation.Core.dll</HintPath>
     </Reference>
     <Reference Include="Codeable.Foundation.Web.Common, Version=4.0.54.15409, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Codeable.Foundation.4.0.54\lib\Codeable.Foundation.Web.Common.dll</HintPath>
+      <HintPath>..\..\packages\Codeable.Foundation.4.0.54\lib\Codeable.Foundation.Web.Common.dll</HintPath>
     </Reference>
     <Reference Include="Codeable.Foundation.Web.Core, Version=4.0.54.15409, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Codeable.Foundation.4.0.54\lib\Codeable.Foundation.Web.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\packages\Codeable.Foundation.4.0.54\lib\Codeable.Foundation.Web.Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Practices.Unity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+      <HintPath>..\..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity.Configuration, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+      <HintPath>..\..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+      <HintPath>..\..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -94,104 +88,67 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http">
     </Reference>
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest">
     </Reference>
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Http.WebHost, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Optimization">
-      <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
-    </Reference>
-    <Reference Include="WebGrease">
-      <Private>True</Private>
-      <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
-    </Reference>
-    <Reference Include="Antlr3.Runtime">
-      <Private>True</Private>
-      <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="App_Data\" />
-    <Folder Include="aurelia\" />
-    <Folder Include="Models\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="App_Start\BundleConfig.cs" />
-    <Compile Include="App_Start\FilterConfig.cs" />
-    <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Global.asax.cs">
-      <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
+    <Compile Include="GitHubPlugin.cs" />
+    <Compile Include="Controllers\GitHubWebHookController.cs" />
+    <Compile Include="Integration\GitHubJsonWebHookValidator.cs" />
+    <Compile Include="Integration\GitHubWebHookValidationResult.cs" />
+    <Compile Include="Integration\IGitHubWebHookValidator.cs" />
+    <Compile Include="Models\GitHubCommit.cs" />
+    <Compile Include="Models\GitHubInstallation.cs" />
+    <Compile Include="Models\GitHubOrganization.cs" />
+    <Compile Include="Models\GitHubPushEvent.cs" />
+    <Compile Include="Models\GitHubCommitAuthor.cs" />
+    <Compile Include="Models\GitHubRepository.cs" />
+    <Compile Include="Models\GitHubUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Workers\CommitMessageParser.cs" />
+    <Compile Include="Workers\GitHubPushEventWorker.cs" />
+    <Compile Include="Workers\ICommitMessageParser.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="favicon.ico" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="Global.asax" />
-    <Content Include="Plugins\Amazon\PluginConfig.txt" />
-    <Content Include="Plugins\Amazon\Stencil.Plugins.Amazon.dll" />
-    <Content Include="Plugins\AzurePush\PluginConfig.txt" />
-    <Content Include="Plugins\AzurePush\Stencil.Plugins.AzurePush.dll" />
-    <Content Include="Plugins\ElasticSync\PluginConfig.txt" />
-    <Content Include="Plugins\ElasticSync\Stencil.Plugins.ElasticSync.dll" />
-    <Content Include="Plugins\Email\PluginConfig.txt" />
-    <Content Include="Plugins\Email\Stencil.Plugins.Email.dll" />
-    <Content Include="Plugins\GitHub\PluginConfig.txt" />
-    <Content Include="Plugins\GitHub\Stencil.Plugins.GitHub.dll" />
-    <Content Include="Plugins\RestAPI\PluginConfig.txt" />
-    <Content Include="Plugins\RestAPI\Stencil.Plugins.RestAPI.dll" />
-    <Content Include="Plugins\SystemMonitor\PluginConfig.txt" />
-    <Content Include="Plugins\SystemMonitor\Stencil.Plugins.SystemMonitor.dll" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="_build.txt" />
-    <Content Include="localAppSettings.config" />
-    <Content Include="localConnectionStrings.config" />
-    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\jquery-1.10.2.js" />
-    <Content Include="Scripts\jquery-1.10.2.min.js" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\respond.js" />
-    <Content Include="Scripts\respond.min.js" />
+    <Content Include="PluginConfig.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -199,46 +156,36 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Content\site.css" />
-    <Content Include="Scripts\_references.js" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Stencil.Common\Stencil.Common.csproj">
+    <ProjectReference Include="..\..\Stencil.Common\Stencil.Common.csproj">
       <Project>{c2ee0d22-4be4-4dde-9f19-997644057d0d}</Project>
       <Name>Stencil.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Stencil.Data.Sql\Stencil.Data.Sql.csproj">
+    <ProjectReference Include="..\..\Stencil.Data.Sql\Stencil.Data.Sql.csproj">
       <Project>{4c4bb6d3-479c-4ca1-a5e0-6f3a7d5f1fba}</Project>
       <Name>Stencil.Data.Sql</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Stencil.Domain\Stencil.Domain.csproj">
+    <ProjectReference Include="..\..\Stencil.Domain\Stencil.Domain.csproj">
       <Project>{58571501-28b4-4dda-8a63-fc1a4b08f5e3}</Project>
       <Name>Stencil.Domain</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Stencil.Primary\Stencil.Primary.csproj">
+    <ProjectReference Include="..\..\Stencil.Primary\Stencil.Primary.csproj">
       <Project>{85b98e1e-d38b-46f3-b3dc-e5b601716c40}</Project>
       <Name>Stencil.Primary</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Stencil.SDK.Windows\Stencil.SDK.Windows.csproj">
+    <ProjectReference Include="..\..\Stencil.SDK.Windows\Stencil.SDK.Windows.csproj">
       <Project>{09e84254-b519-4dac-b02d-d8caa97fd4b9}</Project>
       <Name>Stencil.SDK.Windows</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Stencil.Web\Stencil.Web.csproj">
+    <ProjectReference Include="..\..\Stencil.Web\Stencil.Web.csproj">
       <Project>{af7b1554-f0cd-4c6b-baf1-4ce41dc12f0a}</Project>
       <Name>Stencil.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
-    <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -254,29 +201,22 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>4328</DevelopmentServerPort>
+          <DevelopmentServerPort>5677</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:4328/</IISUrl>
+          <IISUrl>http://localhost:5677/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
-          <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
+          <UseCustomServer>True</UseCustomServer>
+          <CustomServerUrl>http://localhost:4328/</CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props'))" />
-    <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
-  </Target>
   <PropertyGroup>
-    <PreBuildEvent>echo %25date%25 %25time%25 &gt; "$(ProjectDir)\_build.txt"</PreBuildEvent>
+    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)Stencil.Website\Plugins\GitHub\$(TargetFileName)"
+copy "$(TargetPath)" "$(SolutionDir)Stencil.Backing\Plugins\GitHub\$(TargetFileName)"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
