--- a/Source/Stencil.Server/Stencil.Data.Sql/Stencil.Data.Sql.csproj
+++ b/Source/Stencil.Server/Stencil.Data.Sql/Stencil.Data.Sql.csproj
@@ -84,6 +84,9 @@
     <Compile Include="dbAsset.cs">
       <DependentUpon>StencilModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="dbCommit.cs">
+      <DependentUpon>StencilModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="dbGlobalSetting.cs">
       <DependentUpon>StencilModel.tt</DependentUpon>
     </Compile>
