Add daemon to comb incoming commits for ticket IDs and mark them as in progress

--- a/Source/Stencil.Server/Plugins/Stencil.Plugins.GitHub/Stencil.Plugins.GitHub.csproj
+++ b/Source/Stencil.Server/Plugins/Stencil.Plugins.GitHub/Stencil.Plugins.GitHub.csproj
@@ -130,6 +130,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Compile Include="Daemons\GitHubTicketInProgressDaemon.cs" />
     <Compile Include="GitHubPlugin.cs" />
     <Compile Include="Controllers\GitHubWebHookController.cs" />
     <Compile Include="Integration\GitHubJsonWebHookValidator.cs" />
