Add tests for GitHubJsonWebHookValidator

--- a/Source/Stencil.Server/Plugins/Stencil.Plugins.GitHub/Stencil.Plugins.GitHub.csproj
+++ b/Source/Stencil.Server/Plugins/Stencil.Plugins.GitHub/Stencil.Plugins.GitHub.csproj
@@ -133,6 +133,8 @@
     <Compile Include="Daemons\GitHubTicketInProgressDaemon.cs" />
     <Compile Include="GitHubPlugin.cs" />
     <Compile Include="Controllers\GitHubWebHookController.cs" />
+    <Compile Include="Integration\GitHubAssumptions.cs" />
+    <Compile Include="Integration\GitHubEventHeaders.cs" />
     <Compile Include="Integration\GitHubJsonWebHookValidator.cs" />
     <Compile Include="Integration\GitHubWebHookValidationResult.cs" />
     <Compile Include="Integration\IGitHubWebHookValidator.cs" />
