--- a/Source/Stencil.Server/Stencil.Plugins.GitHub.UnitTests/Stencil.Plugins.GitHub.UnitTests.csproj
+++ b/Source/Stencil.Server/Stencil.Plugins.GitHub.UnitTests/Stencil.Plugins.GitHub.UnitTests.csproj
@@ -8,6 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\WebHook_Enqueues_Work_For_Valid_Events.json" />
+    <None Remove="Resources\WebHook_Returns_BadRequest_If_Invalid_Json.json" />
+    <None Remove="Resources\WebHook_Returns_BadRequest_If_Invalid_Request_Signature.json" />
+    <None Remove="Resources\WebHook_Skips_Other_Event_Types.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\WebHook_Returns_BadRequest_If_Invalid_Json.json" />
+    <EmbeddedResource Include="Resources\WebHook_Enqueues_Work_For_Valid_Events.json" />
+    <EmbeddedResource Include="Resources\WebHook_Skips_Other_Event_Types.json" />
+    <EmbeddedResource Include="Resources\WebHook_Returns_BadRequest_If_Invalid_Request_Signature.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="4.1.1" />
     <PackageReference Include="Codeable.Foundation" Version="4.0.54" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.3" />
