--- a/Source/Stencil.Server/Stencil.Primary/packages.config
+++ b/Source/Stencil.Server/Stencil.Primary/packages.config
@@ -2,12 +2,12 @@
 <packages>
   <package id="AutoMapper" version="4.1.1" targetFramework="net45" />
   <package id="Codeable.Foundation" version="4.0.54" targetFramework="net45" />
-  <package id="Elasticsearch.Net" version="2.3.3" targetFramework="net45" />
+  <package id="Elasticsearch.Net" version="2.3.3" targetFramework="net45" requireReinstallation="true" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
-  <package id="NEST" version="2.3.3" targetFramework="net45" />
+  <package id="NEST" version="2.3.3" targetFramework="net45" requireReinstallation="true" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
 </packages>
