--- a/Source/Stencil.Server/Stencil.Domain/Stencil.Domain.csproj
+++ b/Source/Stencil.Server/Stencil.Domain/Stencil.Domain.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Domain\ProductVersion.cs" />
     <Compile Include="Domain\ProductVersionPlatform.cs" />
     <Compile Include="Domain\Ticket.cs" />
+    <Compile Include="Domain\TicketComment.cs" />
     <Compile Include="Domain\TicketStatus.cs" />
     <Compile Include="Domain\TicketType.cs" />
     <Compile Include="Domain\WellKnownEntitlements.cs" />
