Add business logic and security logic for TicketComments

--- a/Source/Stencil.Server/Stencil.Primary/Stencil.Primary.csproj
+++ b/Source/Stencil.Server/Stencil.Primary/Stencil.Primary.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Business\Direct\Implementation\ProductVersionPlatformBusiness_Crud.cs" />
     <Compile Include="Business\Direct\Implementation\TicketBusiness.cs" />
     <Compile Include="Business\Direct\Implementation\TicketBusiness_Crud.cs" />
+    <Compile Include="Business\Direct\Implementation\TicketCommentBusiness.cs" />
     <Compile Include="Business\Direct\Implementation\TicketCommentBusiness_Crud.cs" />
     <Compile Include="Business\Direct\IPlatformBusiness_Crud.cs" />
     <Compile Include="Business\Direct\IProductBusiness_Crud.cs" />
@@ -150,6 +151,7 @@
     <Compile Include="Business\Direct\ITicketBusiness.cs" />
     <Compile Include="Business\Direct\ITicketBusiness_Crud.cs" />
     <Compile Include="Business\Direct\IProductBusiness.cs" />
+    <Compile Include="Business\Direct\ITicketCommentBusiness.cs" />
     <Compile Include="Business\Direct\ITicketCommentBusiness_Crud.cs" />
     <Compile Include="Business\Direct\_DirectExtensions.cs" />
     <Compile Include="Business\Index\Factory\DocumentNames.cs" />
